服务调试通过